# SharedPortProxy

./: CMakeLists.txt  README.md
3rd/: asio.hpp
SharedPortProxy/: SharedPortProxy.sln  SharedPortProxy.vcxproj  SharedPortProxy.vcxproj.filters  loader.py  spp.conf
SharedPortProxy/scripts/: debug.py  httpfilter.py  mstsc.py  openvpn.py  sshfilter.py
src/: Configuration.cpp  Configuration.h  ConnectionPool.hpp  EasyUsing.h  Filter.cpp  Filter.h  ScriptManager.cpp  ScriptManager.h  Semaphore.h  SocketWrapper.hpp  TcpConnection.hpp  main.cpp
